<resources>
    <string name="app_name">HelpMeUp</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok">OK</string>
    <string name="permision_available_bluetooth">Bluetooth Permission has been granted. Preview can now be opened."</string>
    <string name="permission_bluetooth_rationale">Bluetooth permission is needed to show the bluetooth preview."</string>
    <string name="contact_list_header">"Choose which contacts you wish to include in your emergency contacts.\n"</string>
    <string name="emergency_list_header">"Choose which numbers you would like to use for "</string>
    <string name="emergency_dialog_header">"Here is a list of your emergency contact numbers. "</string>
    <string name="empty_emergency_list">"Your emergency list is empty!  Please add some contacts.\n\n"</string>
    <string name="is_intro_header">"Help Me Up\nv1.0"</string>
    <string name="is_intro_maintext">"Thank you for using the Help Me Up System.  Your protection is just minutes away but first we need you to do a brief system setup.  We will step you through the setup process as well as provide you additional information on how this app works."</string>
    <string name="is_intro_secondarytext">"The setup process will contain 3 mandatory sections and 2 optional sections.\nThe sections are broken down as follows: \n1) Permissions \n2) Bluetooth Connection \n3) Emergency Contact List \n4) (Optional) Alarm and Messaging \n5) (Optional) Additional Features and Navigation"</string>
    <string name="perm_intro_header">"Section 1\nPermissions"</string>
    <string name="perm_intro_maintext">"All permissions used by this application are essential for the Help Me Up System to work.  None of these features will be used to track your personal information or modify your phones functionality in any way. There are 6 types of permissions needed that will be broken down next." </string>
    <string name="perm_perms_ini">"Permissions are required for the following 6 functions: "</string>
    <string name="perm_perms_perm1">"Bluetooth Access"</string>
    <string name="perm_perms_perm2">"Send SMS Message"</string>
    <string name="perm_perms_perm3">"Access Location"</string>
    <string name="perm_perms_perm4">"Modify Audio Settings"</string>
    <string name="perm_perms_perm5">"Internet Access"</string>
    <string name="perm_perms_perm6">"Access Contacts"</string>
    <string name="perm_picking_text">"Click an image or text above to see why the permission is required for the Help Me Up System."</string>
    <string name="perm_bluetooth_info">"Bluetooth is the only way the Fall Sensor Device and the Messenger Application can communicate with each other.  If a fall occurs, bluetooth must be enabled so that the Fall Sensor Device can notify the Messenger Application to send out messages to your contacts."</string>
    <string name="perm_SMS_info">"SMS is required to notify the people you select in your emergency contact list through SMS messaging.  Without SMS nobody can be notified of a fall.  Standard data rates apply."</string>
    <string name="perm_location_info">"The Help Me Up System needs your location so that when a fall occurs your contacts can be given your GPS location.  Without location positioning it may take days to find people who fall."</string>
    <string name="perm_audio_info">"When a fall occurs an audio alarm will be needed for two reasons.  In the case of a fall, the audio alarm will notify people nearby that something has gone wrong.  In the case a panic or fall event has been resolved, the user or others will know they need to stop the messaging."  </string>
    <string name="perm_internet_info">"Internet access is required for GPS location services as well as for database usage.  Without internet access certain services for the Help Me Up System will become unusable."</string>
    <string name="perm_contacts_info">"Your contacts are required so that the app can provide you options for your emergency contact list.  Without contact access the Help Me Up System will not be able to find people to notify during a fall."</string>
    <string name="perm_permissions_ready">"Your permissions have been accepted!  Click next to continue."</string>
    <string name="perm_permissions_notready">"You must accept all permissions to continue.  You can click the above permissions to see why they are required."</string>
    <string name="perm_bluetooth_header">"Section 2\nBluetooth Connection"</string>
    <string name="perm_bluetooth_initial_maintext">"The bluetooth connection requires you to search for the device and select it.  This section will give an easy step-by-step guide to this process."</string>
    <string name="perm_bluetooth_initial_pretext">"When you first see the window there will be a list of paired devices and 4 buttons.  When the screen pops up click on the search button."</string>
    <string name="perm_bluetooth_step_one">"The search button is located at the position of the red circle."</string>
    <string name="perm_bluetooth_step_two">"After you click the search button a second list will pop up below the list of paired devices as shown in the red circle."</string>
    <string name="perm_bluetooth_step_three">"Search for a device with Help Me Up in the name and then click on it to connect the device through bluetooth."</string>
    <string name="perm_bluetooth_step_four">"If the connection is successful the device will show up your paired list above when you open this in the future."</string>
    <string name="perm_bluetooth_final_text">"You are now finished with setting up the bluetooth connection.  Next will be the Emergency Contact List setup."</string>
    <string name="perm_contacts_header">"Section 3\nEmergency Contact List"</string>
    <string name="perm_contacts_initial_maintext">"Now that the bluetooth connection with the Fall Sensor Device has been established, you will need to select people from your contacts list to be used as emergency contacts.  The Help Me Up System will notify these emergency contacts if a fall or other emergency occurs ."</string>
    <string name="perm_contacts_initial_pretext">"There are two different lists contact lists used by the device: the contact list with all your contacts and the emergency list which contains the numbers of the contacts you wish to contact during an emergency."</string>
    <string name="perm_contacts_step_one">"Now to setup your emergency list you will have to first select contacts from the contact list."</string>
    <string name="perm_contacts_step_two">"After you open up your contact list click on a name of a contact you want to use as an emergency contact."</string>
    <string name="perm_contacts_step_three">"When that contact is selected a new list will pop up with all the phone numbers associated with that contact."</string>
    <string name="perm_contacts_step_four">"You can choose as many phone numbers for that contact as you like."</string>
    <string name="perm_contacts_step_five">"In general it is best to use as many valid phone numbers for that contact as possible so that you increase the odds of a quick emergency response."</string>
    <string name="perm_contacts_step_six">"When you click a phone number it will be highlighted green, if you click it again it will go back to white.  Only green phone numbers will be added to the Emergency List."</string>
    <string name="perm_contacts_step_seven">"After a contact has been pressed you will notice the contact will also be highlighted green."</string>
    <string name="perm_contacts_step_eight">"This highlight shows which contacts you have considered adding to the emergency list regardless of any numbers being added or not."</string>
    <string name="perm_contacts_step_nine">"Additionally any contacts in your emergency list will be already highlighted green when you open up the contact list in the future."</string>
    <string name="perm_contacts_step_ten">"After you have selected all the phone numbers you want added to the emergency list just scroll down until you see the OK button and press it to finalize changes."</string>
    <string name="perm_contacts_step_eleven">"The emergency list will show the current phones numbers you will contact during an emergency."</string>
    <string name="perm_contacts_step_twelve">"Additionally the number of numbers and people you will contact is listed.  We recommend 3 to 6 people that you contact."</string>
    <string name="perm_contacts_step_thirteen">"You can also modify the Emergency List by clicking the contacts button."</string>
    <string name="perm_contacts_final_text">"You are now finished with all 3 mandatory sections.  If you would like to see additional features and learn how to navigate the app press the "Section 4" Button.  If you would like to finish the initial setup press the "Finish" Button.</string>
    <string name="perm_alarmmess_header">"Section 4\nMessaging and Alarms"</string>
    <string name="perm_finished">"Thank you for taking your time to finish the initial setup.  You are free to do as you please!"</string>
    <string name="perm_alarmmess_initial_maintext">"When you fall or press the panic button the messaging process will occur after a set amount of time (60 seconds by default).  Every number in your emergency list will be sent a message that says an emergency has occurred along with your location so they can find you."</string>
    <string name="perm_alarmmess_initial_secondtext">"The text message to your contacts will be similar to the following: \n\nHelp!  I have fallen at 5555 Deer Road, San Diego California 92130 USA"</string>
    <string name="perm_alarmmess_initial_thirdtext">"The message process will send out messages to your emergency contacts periodically (default 180 seconds) until 20 messages have been sent or the Fall alarm is cancelled."</string>
    <string name="perm_alarmmess_step_one">"Before the messaging process occurs an alarm will go off notifying a fall or panic button press has happened."</string>
    <string name="perm_alarmmess_step_two">"In the case of a false alarm simply press the alarm to cancel and avoid having messages sent out to emergency contacts."</string>
    <string name="perm_alarmmess_step_three">"You can customize the noise and alarm delay under settings.  The alarm will make a loud noise and will have an animation when it goes off."</string>
    <string name="perm_alarmmess_step_four">"The goal of having a dramatic alarm is to draw in people that can help you in case of an emergency."</string>
    <string name="perm_alarmmess_final_maintext">"This concludes Alarm and Messaging.  If you would like to see Additional Features and Navigation click the "Section 5" Button.  If you would like to finish the initial setup press the "Finish" Button."</string>
    <string name="perm_addfeat_header">"Section 5\nAdditional Features and Navigation"</string>
    <string name="perm_addfeat_initial_maintext">"This section will go through the following additional features: Database and Settings.  Then will finish off with navigation and background processes. "</string>
    <string name="perm_addfeat_second_maintext">"The database displays information on key events during the usage of the Help Me Up System.  Whenever the following 3 events happen the database will record information: a fall event, a panic button press event, and a device reliability error event."</string>
    <string name="perm_addfeat_db_step_one">"When a fall occurs the database will record the event with information on the time and location it occurred, the severity of the fall, and the messaging process that occurred."</string>
    <string name="perm_addfeat_db_step_two">"When a panic event the information recorded is similar to that off a fall, except no fall severity will be recorded."</string>
</resources>