<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    android:rowCount="8"
    android:background="@color/colorbetweenbluegreen">

    <TextView
        android:id="@+id/permsHeaderText"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textAlignment="center"
        android:text="@string/perm_intro_header"
        android:textStyle="bold"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="0.1"
        android:textColor="@color/colorRed"
        android:layout_width="400sp"
        android:layout_height="100sp"
        />

    <ImageView
        android:id="@+id/pbluetooth_lay_image"
        android:src="@mipmap/bluetooth_image"
        android:layout_row="1"
        android:layout_column="0"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/pbluetooth_text_brief"
        android:text="@string/perm_perms_perm1"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textSize="20sp"
        android:layout_row="1"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="5sp"
        android:layout_column="0"/>


    <ImageView
        android:id="@+id/psms_lay_image"
        android:src="@mipmap/sms_image"
        android:layout_row="2"
        android:layout_column="0"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/psms_text_brief"
        android:text="@string/perm_perms_perm2"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textSize="20sp"
        android:layout_row="2"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="5sp"
        android:layout_column="0"/>

    <ImageView
        android:id="@+id/plocation_lay_image"
        android:src="@mipmap/location_image"
        android:layout_row="3"
        android:layout_column="0"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/plocation_text_brief"
        android:text="@string/perm_perms_perm3"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textSize="20sp"
        android:layout_row="3"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="5sp"
        android:layout_column="0"/>

    <ImageView
        android:id="@+id/paudio_lay_image"
        android:src="@mipmap/audio_image"
        android:layout_row="4"
        android:layout_column="0"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/paudio_text_brief"
        android:text="@string/perm_perms_perm4"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textSize="20sp"
        android:layout_row="4"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="5sp"
        android:layout_column="0"/>

    <ImageView
        android:id="@+id/pinternet_lay_image"
        android:src="@mipmap/internet_image"
        android:layout_row="5"
        android:layout_column="0"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/pinternet_text_brief"
        android:text="@string/perm_perms_perm5"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textSize="20sp"
        android:layout_row="5"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="5sp"
        android:layout_column="0"/>

    <ImageView
        android:id="@+id/pcontacts_lay_image"
        android:src="@mipmap/contacts_image"
        android:layout_row="6"
        android:layout_column="0"
        android:contentDescription="@null"
        />

    <TextView
        android:id="@+id/pcontacts_text_brief"
        android:text="@string/perm_perms_perm6"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:textSize="20sp"
        android:layout_row="6"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="5sp"
        android:layout_column="0"/>

    <Button
        android:id="@+id/permsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fancybutton"
        android:layout_gravity="center_horizontal"
        android:text="Next"
        android:textColor="@color/colorGreen"
        />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="200sp">


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="150sp">


    </LinearLayout>

</GridLayout>

