<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fancydialogbackground">

    <TextView
        android:id="@+id/testHeaderText"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textAlignment="center"
        android:text="@string/perm_intro_header"
        android:textStyle="bold"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="0.1"
        android:textColor="@color/colorRed"
        android:layout_width="400sp"
        android:layout_height="200sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp" />




    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:id="@+id/testGridLayout1"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testHeaderText"
        android:layout_marginBottom="200sp"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="125sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp">

        <ImageView
            android:id="@+id/tbluetooth_lay_image"
            android:src="@mipmap/bluetooth_image"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/tbluetooth_text_brief"
            android:text="@string/perm_perms_perm1"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="0"
            android:layout_column="1"/>

        <ImageView
            android:id="@+id/tsms_lay_image"
            android:src="@mipmap/sms_image"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/tsms_text_brief"
            android:text="@string/perm_perms_perm2"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="1"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/tlocation_lay_image"
            android:src="@mipmap/location_image"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/tlocation_text_brief"
            android:text="@string/perm_perms_perm3"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="2"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/taudio_lay_image"
            android:src="@mipmap/audio_image"
            android:layout_row="3"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/taudio_text_brief"
            android:text="@string/perm_perms_perm4"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="3"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/tinternet_lay_image"
            android:src="@mipmap/internet_image"
            android:layout_row="4"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/tinternet_text_brief"
            android:text="@string/perm_perms_perm5"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="4"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/tcontacts_lay_image"
            android:src="@mipmap/contacts_image"
            android:layout_row="5"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/tcontacts_text_brief"
            android:text="@string/perm_perms_perm6"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="5"
            android:layout_column="1"
            />


    </GridLayout>


    <TextView
        android:id="@+id/test_picker_text"
        android:text="@string/perm_picking_text"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:textSize="20sp"
        android:layout_marginBottom="250sp"
        android:layout_marginTop="260sp"
        app:layout_constraintTop_toBottomOf="@+id/testGridLayout1"
        app:layout_constraintBottom_toTopOf="@+id/testButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25sp"
        android:layout_marginStart="25sp" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fancybutton"
        android:layout_gravity="center_horizontal"
        android:text="Next"
        android:textColor="@color/colorGreen"
        android:layout_marginRight="8sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="80sp"
        android:layout_marginBottom="20sp"
        app:layout_constraintTop_toBottomOf="@+id/testGridLayout1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp" />

</android.support.constraint.ConstraintLayout>