<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/fancydialogbackground">

    <TextView
        android:id="@+id/permHeaderText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="36sp"
        android:textAlignment="center"
        android:text="@string/perm_intro_header"
        android:textStyle="bold"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="0.1"
        android:textColor="@color/colorRed"
        android:layout_width="400sp"
        android:layout_height="100sp"
        />

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_weight="5"

        android:id="@+id/GridLayout1"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bluetooth_lay_image"
            android:src="@mipmap/bluetooth_image"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/bluetooth_text_brief"
            android:text="@string/perm_perms_perm1"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="0"
            android:layout_column="1"/>

        <ImageView
            android:id="@+id/sms_lay_image"
            android:src="@mipmap/sms_image"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/sms_text_brief"
            android:text="@string/perm_perms_perm2"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="1"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/location_lay_image"
            android:src="@mipmap/location_image"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/location_text_brief"
            android:text="@string/perm_perms_perm3"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="2"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/audio_lay_image"
            android:src="@mipmap/audio_image"
            android:layout_row="3"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/audio_text_brief"
            android:text="@string/perm_perms_perm4"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="3"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/internet_lay_image"
            android:src="@mipmap/internet_image"
            android:layout_row="4"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/internet_text_brief"
            android:text="@string/perm_perms_perm5"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="4"
            android:layout_column="1"
            />

        <ImageView
            android:id="@+id/contacts_lay_image"
            android:src="@mipmap/contacts_image"
            android:layout_row="5"
            android:layout_column="0"
            android:contentDescription="@null"
            />

        <TextView
            android:id="@+id/contacts_text_brief"
            android:text="@string/perm_perms_perm6"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:textSize="20sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_row="5"
            android:layout_column="1"
            />


    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="5"/>


    <Button
        android:id="@+id/permButton"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fancybutton"
        android:layout_gravity="center_horizontal"
        android:text="Next"
        android:textColor="@color/colorGreen"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="5"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="5"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_weight="5"/>

</LinearLayout>